--- a/css/style_review.css
+++ b/css/style_review.css
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 90%;
     text-align: center;
     padding-bottom: 50px;
 }
@@ -65,6 +65,9 @@
     .portada{
         width: 220px;
         height: 330px;
+    }
+    .l{
+        padding-bottom: 90px;
     }
 }
 @media (max-width: 767px){
